# ccontext

./: .gitignore  MANIFEST.in  README.md  ideas.MD  ideas.md  output.md  pyproject.toml  requirements.txt  run_ccontext.sh  setup.py
.github/workflows/: publish-to-pypi.yml
ccontext/: __init__.py  __main__.py  argument_parser.py  cli.py  clipboard.py  config.json  config.ts  configurator.py  content_handler.py  file_node.py  file_system.py  file_tree.py  fix_wsl.py  main.py  md_generator.py  output_handler.py  pdf_generator.py  research_pdf_generator.py  run_crawlers.py  tokenizer.py  utils.py
